@@ -29,7 +29,7 @@ manager for the X Window system. <a href="download.html">Get</a> your copy.
 <blockquote>
 <table border=0 cellpadding=0 cellspacing=0>
   <tr><td>Latest Stable Release: <td><b>2.2.4</b></tr>
-  <tr><td>Latest Beta Version: <td><b>2.3.23</b></tr>
+  <tr><td>Latest Beta Release: <td><b>2.3.24</b></tr>
 </table>
 </blockquote>
 
@@ -60,6 +60,6 @@ manager for the X Window system. <a href="download.html">Get</a> your copy.
 
 <hr>
 Created: Jan 31, 1996 *
-Last modified: Nov 26, 2000
+Last modified: Nov 29, 2000
 </body>
 </html>
